# bonsai

./: .gitignore  CMakeLists.txt  README.md
include/bonsai/: engine.h  service_locator.h
include/bonsai/core/log/: abstract_log_channel.h  log_entry.h  log_entry_builder.h  log_level.h
include/bonsai/platform/: window.h
src/: bonsai.cpp  engine.cpp  main.cpp
src/core/log/: log_entry_builder.cpp  log_level.cpp  logger.cpp
src/platform/: glfw_window.cpp  glfw_window.h
